--- a/src/PCS/DispatcherHandler/Emulator/DispatcherEmulator.fxml
+++ b/src/PCS/DispatcherHandler/Emulator/DispatcherEmulator.fxml
@@ -10,7 +10,8 @@
     <children>
         <AnchorPane prefHeight="30.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
             <children>
-                <Button layoutX="115.0" layoutY="1.0" mnemonicParsing="false" onAction="#buttonPressed" prefHeight="40.0" prefWidth="150.0" text="Print a ticket" AnchorPane.bottomAnchor="-1.0" AnchorPane.leftAnchor="115.0" AnchorPane.topAnchor="1.0"><font><Font size="12.0" /></font></Button>
+                <Button layoutX="65.0" layoutY="1.0" mnemonicParsing="false" onAction="#buttonPressed" prefHeight="40.0" prefWidth="100.0" text="Print a ticket" AnchorPane.bottomAnchor="-1.0" AnchorPane.leftAnchor="45.0" AnchorPane.topAnchor="1.0"><font><Font size="12.0" /></font></Button>
+                <Button layoutX="165.0" layoutY="1.0" mnemonicParsing="false" onAction="#buttonPressed" prefHeight="40.0" prefWidth="100.0" text="Remove ticket" AnchorPane.bottomAnchor="-1.0" AnchorPane.leftAnchor="225.0" AnchorPane.topAnchor="1.0"><font><Font size="12.0" /></font></Button>
             </children>
         </AnchorPane>
 
