--- a/src/PCS/VacancyHandler/Emulator/VacancyEmulator.fxml
+++ b/src/PCS/VacancyHandler/Emulator/VacancyEmulator.fxml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="470.0" prefWidth="420.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="PCS.VacancyHandler.Emulator.VacancyEmulatorController">
     <children>
-
-        <AnchorPane prefHeight="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="60.0">
+        <AnchorPane prefHeight="30.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="60.0">
+            <children>
+                <Button layoutX="65.0" layoutY="1.0" mnemonicParsing="false" onAction="#buttonPressed" prefHeight="40.0" prefWidth="100.0" text="Poll ACK" AnchorPane.bottomAnchor="-1.0" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="1.0"><font><Font size="12.0" /></font></Button>
+                <Button layoutX="165.0" layoutY="1.0" mnemonicParsing="false" onAction="#buttonPressed" prefHeight="40.0" prefWidth="100.0" text="Auto Poll: On" AnchorPane.bottomAnchor="-1.0" AnchorPane.leftAnchor="140.0" AnchorPane.topAnchor="1.0" fx:id="autoPollButton"><font><Font size="12.0"/></font></Button>
+                <Button layoutX="165.0" layoutY="1.0" mnemonicParsing="false" onAction="#buttonPressed" prefHeight="40.0" prefWidth="100.0" text="Poll Request" AnchorPane.bottomAnchor="-1.0" AnchorPane.leftAnchor="250.0" AnchorPane.topAnchor="1.0"><font><Font size="12.0" /></font></Button>
+            </children>
+        </AnchorPane>
+        <AnchorPane prefHeight="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="30.0">
             <children>
                 <Label layoutX="117.0" layoutY="-15.0" prefHeight="30.0" prefWidth="132.0" text="Vacancy Display Board" AnchorPane.leftAnchor="117.0"> Ticket ID: </Label>
 
